# trifle

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  coverage.json  deny.toml
.github/workflows/: coverage.yaml  release.yaml  test.yaml
benches/: search.rs
benchmarks/: ASSETS.md  Cargo.toml  README.md
benchmarks/scripts/: plot_selsweep.py
benchmarks/sources/: geonames-all.json  geonames-cities15000.json  msmarco-qrels.json  msmarco-queries.json  msmarco.json  words_alpha.json
benchmarks/src/: baselines.rs  corpus.rs  instrument.rs  main.rs  metrics.rs  profile.rs  query.rs  rng.rs
benchmarks/tools/: README.md  calibrate_pool.py  latency_plot.py  tmax_knee.py  tmax_perquery.py
crates/croaring-bsi-bench/: Cargo.toml
crates/croaring-bsi-bench/src/: main.rs
crates/trifle-lean/: Cargo.toml
crates/trifle-lean/examples/: query_latency.rs
crates/trifle-lean/src/: lib.rs
crates/trifle-overlap/: Cargo.toml
crates/trifle-overlap/examples/: deserialize_cost.rs  flatness.rs
crates/trifle-overlap/src/: lib.rs
docs/: ROADMAP.md  derivation.md  design.md  tuning.md  v0.4-M6-plan.md  v0.4-implementation-plan.md  v0.4.1-plan.md
docs/design/rev-simplify/: BRIEF.md  HANDOFF-integration.md  PROPOSAL.md  critique-core.md  critique-filter.md  critique-storage.md  perf-findings.md  perf-research-bsi-algo.md  perf-research-bsi-systems.md  perf-research-croaring-depth.md  perf-research-pipeline.md  proposal-core.md  proposal-filter.md  proposal-storage.md
docs/reports/pool-law/: README.md
docs/reports/tmax-sweep/: README.md
src/: dict.rs  error.rs  filter.rs  hash.rs  instrument.rs  lib.rs  model.rs  postings.rs  rank.rs  schema.rs  search.rs  select.rs  term.rs  tokenize.rs  welford.rs
src/store/: mod.rs  pool.rs  shared.rs  sidecar.rs
tests/: adversarial.rs  api.rs  backends.rs  basic.rs  budget.rs  components.rs  cycle2.rs  drift.rs  energy.rs  filter.rs  fusion.rs  lifecycle.rs  ranking.rs  recall_budget.rs  scope_ranker.rs  stream.rs  thrash.rs  typo.rs  unicode.rs  union.rs
tests/common/: mod.rs
