[package]
name = "trifle-benchmarks"
version = "0.0.0"
edition = "2024"
publish = false
description = "Latency/throughput + recall benchmark harness for trifle. Not published."

[dependencies]
# `tracing` feature on: the profile pass attaches a collector to trifle's per-query
# "overlap candidate generation" event to read Σ(kept-posting cardinality).
# With no subscriber installed (the latency/recall runs) the events cost ~nothing.
trifle = { path = "..", features = ["tracing"] }
# The FTS5-trigram (BM25) and LIKE-scan baselines run in-process against the same
# bundled SQLite trifle links, so the comparison is apples-to-apples on the store.
rusqlite = { version = "0.37", features = ["bundled"] }
# Parse the committed pinned-source manifests (url + sha256 + attribution).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Each engine builds into its own throwaway temp directory.
tempfile = "3"
# The work-done collector reads trifle's hot-path event fields.
tracing = "0.1"
# The overlap engine + CRoaring, benched directly on synthetic bitmaps by `bench` (no SQLite
# in the loop), to measure the build/walk in isolation.
trifle-overlap = { path = "../crates/trifle-overlap" }
croaring = "2.6"

[lints]
workspace = true

# Standalone workspace root. The benchmark crate is `exclude`d from the trifle workspace
# (it is unpublished and adds no dependency to what downstream users compile), so building
# it via its own manifest needs its own `[workspace]` table — otherwise cargo resolves the
# parent workspace that excludes it and errors. The lint bar below mirrors the trifle
# workspace's so the same `clippy::all` / `unsafe_op_in_unsafe_fn` deny gate applies here.
[workspace]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[[bin]]
name = "trifle-bench"
path = "src/main.rs"
