[package]
name = "trifle-lean"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "Spike: lean storage + streaming-overlap + raw-SQL-filter vertical slice (rev v0.3 PROPOSAL.md Layers 2/3)."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
trifle-overlap = { path = "../trifle-overlap" }
# `array` registers the rarray vtab used for batched `WHERE id IN rarray(?)` reads and for the
# caller's `key IN rarray(?)` filter mode.
rusqlite = { version = "0.37", features = ["bundled", "array"] }
# CRoaring backend (matches trifle-overlap). Permissive `^2.6`, MSRV 1.85.
croaring = "2.6"

[lints]
workspace = true
