[package]
name = "trifle-overlap"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "IDF-weighted bit-sliced overlap engine for trifle, on the CRoaring (SIMD) backend with zero-copy posting views."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# CRoaring (SIMD) backend. Permissive `^2.6` per the dependency policy: trifle keeps MSRV 1.85
# (croaring 2.6 has no MSRV floor), a consumer's MSRV-aware resolver lands each on the right
# croaring for its toolchain. 2.7+ requires Rust 1.95. croaring views the `roaring`-crate's own
# portable bytes zero-copy (byte-identical format) — no storage migration.
croaring = "2.6"

[lints]
workspace = true

[[example]]
name = "flatness"
