[package]
name = "trifle-overlap"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "IDF-weighted bit-sliced overlap engine for trifle, on the CRoaring (SIMD) backend with zero-copy posting views."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# CRoaring (SIMD). Permissive `^2.6` to keep MSRV 1.85: croaring 2.6 has no MSRV floor, while
# 2.7+ requires Rust 1.95, so a consumer's MSRV-aware resolver lands each on the right croaring
# for its toolchain. The engine views stored portable bytes zero-copy.
croaring = "2.6"

[lints]
workspace = true

[[example]]
name = "flatness"
